src/examples/test-doubles/ThrowExceptionExampleTest.php.out
./tools/phpunit tests/ThrowExceptionExampleTest.php
PHPUnit 10.3.0 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.2.10

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 22.46 MB

There was 1 error:

1) ThrowExceptionExampleTest::testThrowExceptionStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/ThrowExceptionExampleTest.php:9

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
